rewrote some unimportant lines and comments cleaner, fixed upcoming not showing next month's tasks issue, added delete button style

--- a/style.css
+++ b/style.css
@@ -134,10 +134,12 @@ textarea {
 
 /* To do cards */
 #card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 300px;
   background-color: rgba(56, 144, 206, 0.95);
   color: white;
-  border-radius: 10px;
   text-align: center;
 }
 .card-icon {
@@ -150,6 +152,18 @@ textarea {
   word-wrap: break-word;
 }
 .card-title {
+  font-size: 1.75rem;
+}
+.card-button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: red;
+  color: white;
+  border-style: none;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
+.card-button:hover {
   font-size: 1.75rem;
 }
 
